fix(core): `Notification` fix label overlapping close button on long text (#14114)

--- a/projects/core/components/notification/notification.style.less
+++ b/projects/core/components/notification/notification.style.less
@@ -17,6 +17,6 @@
     clip-path: inset(0.375rem 0 round var(--tui-radius-m));
 }
 
-.t-closable {
+.t-closable[data-size] {
     padding-inline-end: 2.5rem;
 }
